--- a/backstage.yaml
+++ b/backstage.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: dice-roller
+  name: Kubeexample
   description: example.com
   annotations:
     backstage.io/kubernetes-id: dice-roller    
